fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
     margin: 0em;
     padding: 0em;
     width: 100%;
-    font-size: 30px;
+    font-size: 25px;
     font-family: Courier New, monospace;
     background-color: transparent;
 }
@@ -25,7 +25,7 @@ section{
 }
 
 .container{
-    padding: 1em 25%;
+    padding: 2em;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -38,16 +38,13 @@ p{
 }
 
 header{
-    margin: auto;
-    padding: 0em 25%;
-    width: 50%;
+    padding: 1em;
     display: flex;
     justify-content: space-between;
     background-color: #1F1F1F;
 }
 
 header img{
-    float: left;
     width: 4em;
 }
 
@@ -57,10 +54,10 @@ nav li{
     padding: 2em .5em;
 }
 
-
 nav ul{
     margin: 0em;
 }
+
 nav li a{
     text-decoration: none;
     font-weight: bold;
